# cmake-google-tests

./: .gitignore  CMakePresets.json  README.md  azure-pipelines.yml
conan/: CMakeLists.txt  compile_commands.json  conanfile.txt
conan/scripts/: build.sh  clean-build.sh
conan/tests/: CMakeLists.txt
docker/: Dockerfile
fetch-content/: compile_commands.json
fetch-content/scripts/: build.sh  clean-build.sh
fetch-content/src/multiply/: CMakeLists.txt
fetch-content/tests/: CMakeLists.txt  multiply_test.cpp
scripts/: build_x86-64.sh
scripts/helpers/: vcpkg-install.sh
scripts/pipeline/: ubuntu_build.yml  ubuntu_test.yml
vcpkg/: CMakeLists.txt  compile_commands.json  vcpkg.json
vcpkg/scripts/: build.sh  clean-build.sh
vcpkg/src/: CMakeLists.txt
vcpkg/src/multiply/: multiply.cpp
vcpkg/src/multiply/include/multiply/: multiply.h
vcpkg/tests/: CMakeLists.txt  multiply_test.cpp
